--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/notify_membership_remittance.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/notify_membership_remittance.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %}{% trans 'Notify membership campaign' %}{% endblock %}
+{% block title %}{% trans 'Notify membership remittance' %}{% endblock %}
 
 {% block extrahead %}
     {{ block.super }}
@@ -65,9 +65,8 @@
     <div id="upload_form" class="main-container">
         <h1>{% trans 'What this section does?' %}</h1>
         <ul>
-            <li>{% trans 'It notifies by email the membership campaign start to all families that were members last course.' %}</li>
-            <li>{% trans 'Each family will receive a different email depending if they are going to renew or not.' %}</li>
-            <li>{% trans 'It should be sent before the campaign starts.' %}</li>
+            <li>{% trans 'It notifies by email to the families that the membership fee will be charged soon.' %}</li>
+            <li>{% trans 'It should be sent before the remittance is uploaded to the bank.' %}</li>
         </ul>
         <br/>
 
@@ -76,20 +75,14 @@
         <ul>
             <li>
                 <div class="mb-3">
-                  <label for="families_renew_count" class="form-label"><a href="{{ families_renew_url }}" target="_new">{% trans 'Families to renew (last year members, with children in school and have not declined)' %}</a></label>
-                  <input type="text" id="families_renew_count" class="form-control" value="{{ families_renew_count }}" disabled>
+                  <label for="active_course_fee" class="form-label"><a href="{{ fee_url }}" target="_new">{% trans 'Fee' %}</a></label>
+                  <input type="text" id="active_course_fee" class="form-control" value="{{ active_course_fee }}" disabled>
                 </div>
             </li>
             <li>
                 <div class="mb-3">
-                  <label for="families_not_renew_out_of_school_count" class="form-label"><a href="{{ families_not_renew_out_of_school_url }}" target="_new">{% trans 'Families that will not renew due to they do not have children in school anymore' %}</a></label>
-                  <input type="text" id="families_not_renew_out_of_school_count" class="form-control" value="{{ families_not_renew_out_of_school_count }}" disabled>
-                </div>
-            </li>
-            <li>
-                <div class="mb-3">
-                  <label for="families_not_renew_declined_count" class="form-label"><a href="{{ families_not_renew_declined_url }}" target="_new">{% trans 'Families that will not renew due to they have declined renew' %}</a></label>
-                  <input type="text" id="families_not_renew_declined_count" class="form-control" value="{{ families_not_renew_declined_count }}" disabled>
+                  <label for="active_course_members" class="form-label"><a href="{{ active_course_members_url }}" target="_new">{% trans 'Members' %}</a></label>
+                  <input type="text" id="active_course_members" class="form-control" value="{{ active_course_members }}" disabled>
                 </div>
             </li>
         </ul>
