properly display email addresses in notification templates; update email-related settings to use environment variables for improved configurability; adjust mailer to use default reply-to email setting

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/notify_membership_remittance.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/notify_membership_remittance.html
@@ -111,7 +111,7 @@
                 <h1 class="hightlight">{% trans 'Families notified' %}: {{ result.success_emails|length }}</h1>
                 <ul>
                     {% for email in result.success_emails %}
-                        <li>email</li>
+                        <li>{{ email }}</li>
                     {% endfor %}
                 </ul>
             {% endif %}
