--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/notify_membership_campaign.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/membership_campaign/notify_membership_campaign.html
@@ -118,7 +118,7 @@
                 <h1 class="hightlight">{% trans 'Families notified' %}: {{ result.success_emails|length }}</h1>
                 <ul>
                     {% for email in result.success_emails %}
-                        <li>email</li>
+                        <li>{{ email }}</li>
                     {% endfor %}
                 </ul>
             {% endif %}
